# -*- coding: utf-8 -*-

2008-03-07  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/installer.rb:  Use Gem::bin_path in executable stubs to
	  work around Kernel#load bug.
	* lib/rubygems/commands/install_command.rb:  Copy user_install down to
	  Gem::DependencyInstaller.  Patch #23573 by Alf Mikula.

2008-03-06  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/specification.rb:  Don't allow FIXME in specs.
	* lib/rubygems/commands/spec_command.rb:  Add --ruby and --marshal
	  formats.
	* lib/rubygems.rb:  Add Gem::bin_path.  Patch #24114 by James Tucker.

2008-03-04  Eric Hodel  <drbrain@segment7.net>

	* setup.rb:  Moved guts to lib/rubygems/commands/setup_command.rb.
	* lib/rubygems/indexer.rb:  Added RSS feed generation on full index
	  update.

2008-03-04  Phil Hagelberg <technomancy@gmail.com>

	* lib/*: Prerelease gems go into their own index now and are excluded
	from other indices. InstallCommand only gets prereleases if explicitly
	requested. Thanks to Alex Vollmer.

2008-03-04  Eric Hodel  <drbrain@segment7.net>

	* lib/*: Add lots of pretty pretty_print stuff!

2008-02-25  Ryan Davis  <ryand@zenspider.com>

	* lib/rubygems/commands/check_command.rb:  Fix various usability
	  issues.

2009-02-10  Daniel Berger <djberg96@gmail.com>
   * lib/rubygems/specification: Refactored and fixed the installation_path
   method. It was overwrought and it now no longer uses File::SEPARATOR
   explicitly.
   [RubyForge: bug #23879]

2009-02-10  Daniel Berger <djberg96@gmail.com>
   * lib/rubygems/validator.rb: The Gem::Validator#verify_gem_file method
   now explicitly rescues Errno::EINVAL as well as Errno::ENOENT because
   MS Windows raises a different SystemCallError for empty paths.

2009-01-21  Daniel Berger <djberg96@gmail.com>
   * lib/rubygems/remote_fetcher.rb: Split out nil and file handling in
   the download method. Modified file URI handling to work properly.
   [RubyForge: bug #16495]

2009-01-19  Daniel Berger <djberg96@gmail.com>